[package]
name = "computeza-ui-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza UI server -- Leptos SSR application; entry point for the operator console"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-i18n = { workspace = true }
computeza-state = { workspace = true }
computeza-driver-native = { workspace = true }
computeza-reconciler-postgres = { workspace = true }
computeza-secrets = { workspace = true }
aes-gcm = { workspace = true }
secrecy = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# Tower middleware glue for the session-cookie auth layer.
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
chrono = { workspace = true }
uuid = { workspace = true }
