[package]
name = "computeza-ui-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza UI server -- Leptos SSR application; entry point for the operator console"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-i18n = { workspace = true }
computeza-state = { workspace = true }
computeza-driver-native = { workspace = true }
computeza-reconciler-postgres = { workspace = true }
computeza-secrets = { workspace = true }
computeza-audit = { workspace = true }
computeza-identity-federation = { workspace = true }
computeza-license = { workspace = true }
computeza-channel-partner = { workspace = true }
computeza-compliance = { workspace = true }
aes-gcm = { workspace = true }
secrecy = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
# HTTP client used by the /workspace handlers to talk to the local
# Lakekeeper REST catalog + Trino /v1/statement coordinator. The
# reconciler crates have their own HTTP clients but only expose
# health-probe shapes; the workspace UI needs catalog browse and
# SQL execute, which are direct passthroughs to each component's
# API. Defining the JSON envelopes inline here keeps the ui-server
# crate from depending on every reconciler crate just for spec
# deserialization.
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# Workspace file-browser .cptz archive bundle (just a ZIP with a
# manifest.json + files/ tree).
zip = { workspace = true }
# Tower middleware glue for the session-cookie auth layer.
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
chrono = { workspace = true }
uuid = { workspace = true }
# License-enforcement tests issue dev licenses via the same primitives
# `computeza-license` uses internally.
ed25519-dalek = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
